fix Icon-Background for github pages

--- a/frontend/page.html
+++ b/frontend/page.html
@@ -288,7 +288,7 @@
             margin-top: 32px;
             display: flex;
             align-items: center;
-            background-image: url('icon-background.svg');
+            background-image: url('https://leo-markin.github.io/frontend/Icon-background.svg');
             justify-content: center;
         }
         h3 {
